# infresnel

./: .gitignore  LICENSE.txt  README.md  environment.yml  example_yasur.ipynb  example_yasur.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: build.yml
doc/: conf.py  index.rst
infresnel/: __init__.py  _georeference.py  _path.py  _version.py  helpers.py  infresnel.py
notebooks/: example_paths.ipynb  example_paths_grid.ipynb  example_paths_grid_geotiff.ipynb
tests/: test_grid.py
